2013-01-13  Murray Cumming  <murrayc@murrayc.com>

        MySQL: Actually allow self-hosting in Glom itself.

        * glom/appwindow.cc: ui_file_select_save():
	Recognise MySQL self-hosting as self-hosting, so we 
	create a sub-directory and initialize the data.

2013-01-13  Murray Cumming  <murrayc@murrayc.com>

        MySQL: Support MySQL in the command-line utiltiies.

        * glom/glom_create_from_example.cc:
        * glom/glom_test_connection.cc: Add ifdefed code for MySQL.

2013-01-13  Murray Cumming  <murrayc@murrayc.com>

        MySQL: Add comments about AppArmor stopping use of MySQL on Ubuntu.

        * glom/libglom/connectionpool_backends/mysql_self.cc:
        * tests/test_selfhosting_utils.cc: Mention this bug:
	https://bugs.launchpad.net/ubuntu/+source/mysql-5.5/+bug/1095370

2013-01-11  Murray Cumming  <murrayc@murrayc.com>

        MySQL: Add checkboxes to select MySQL when it is in the build.

        * glom/utility_widgets/filechooserdialog_saveextras.[h|cc]:
	Add checkboxes for self-hosting and central MySQL servers.
        * glom/frame_glom.cc: Handle MySQL too, though the 
	MySQL startup does not actually work here, though it
	does in the tests.

2013-01-11  Murray Cumming  <murrayc@murrayc.com>

        FileChooserDialog_SaveExtras: Simplify the ifdefing.

        * glom/utility_widgets/filechooserdialog_saveextras.cc:
	Do not worry about so many combinations of options.
	Let people worry about that if they use it.

2013-01-06  Murray Cumming  <murrayc@murrayc.com>

        MySQL:Use MySQL syntax to change columns

	* glom/libglom/connnectionpool_backends/mysql.cc:
	MYSQL uses:
	ALTER TABLE tablename CHANGE oldfieldname newfieldname oldfieldtype
	to rename columns, instead of PostgreSQL's:
	ALTER TABLE tablename RENAME oldfieldname TO newfieldname

2013-01-06  Murray Cumming  <murrayc@murrayc.com>

        MySQL: Avoid affecting PostgreSQL field types.

        * glom/libglom/db_utils.[h|cc]: create_table():